--- a/Index.html
+++ b/Index.html
@@ -38,7 +38,7 @@
 				</tr>
 				<tr>
 					<th>
-						<a href="NerdyApparel.html">Nerd Apparel</a>
+						<a href="nerdyApparel.html">Nerd Apparel</a>
 					</th>
 				</tr>
 				<tr>
